--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <img src="./heart.png" alt="heart">
     <h1>Hello JAM</h1>
-
+    <span>Comments here</span>
   </div>
 
 </body>
